--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pocket_gallery",
   "version": "1.0.0",
   "description": "*** ## Group Members - Holly David - https://github.com/hollydavis541 - Lindsay Peltier -https://github.com/LindsayPeltier - Travis Skyles - https://github.com/tskyles - David Vloedman - https://github.com/david-vloedman *** ## Overview Pocket gallery is a web application that utilizes the Havard Art Museum API. Users can search for works by title or artist. Users can also create their own galleries to which they can save specific pieces to that are returned from the API. Users can update a work and it's details as well as which gallery it belongs to.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest"
   },
